# greyscope

./: .gitignore  CLAUDE.md  LICENSE  MODEL_CARD.md  MODEL_CARD_INT4.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: train.yaml  train_v2.yaml  train_v2_encoder.yaml
greyscope/: benchmark.py  calibration.py  collator.py  config.py  corn.py  data.py  eval.py  export.py  inference.py  model.py  preprocess.py  raid_eval.py  scoring.py  trainer.py
greyscope/pipeline/: __init__.py  assemble.py  corpora.py  decontam.py  gates.py  generate.py  openrouter.py  paraphrase.py  ptt.py  redditl2.py  score.py  twgov.py  wikinews.py
greyscope/pipeline/prompts/edit/: en.yaml  ja.yaml  zh-tw.yaml
greyscope/pipeline/prompts/mirror/: ja.yaml
greyscope/pipeline/prompts/register/: en.md  ja.md  zh-tw.md
greyscope/v2/: __init__.py  assemble.py  corpora.py  decontam.py  gates.py  generate.py  openrouter.py  paraphrase.py  pricing.py  ptt.py  score.py  twgov.py  wikinews.py
greyscope/v2/prompts/edit/: en.yaml  ja.yaml  zh-tw.yaml
greyscope/v2/prompts/mirror/: en.yaml  zh-tw.yaml
greyscope/v2/prompts/system/: en.yaml  ja.yaml  zh-tw.yaml
modal/: common.py  cred_eval.py  evaluate.py  ourtest_eval.py  paraphrase_baseline.py  release.py  train.py
scripts/: bench_mac_latency.py  build.py  train.py  v2_build.py  v2_pilot.py  v2_reasoning_probe.py  v2_scorer_validation.py
tests/: test_assemble.py  test_benchmark.py  test_collator.py  test_config.py  test_corn.py  test_corpora.py  test_data.py  test_decontam.py  test_eval.py  test_export.py  test_gates.py  test_generate.py  test_inference.py  test_openrouter.py  test_paraphrase.py  test_preprocess.py  test_pricing.py  test_ptt.py  test_raid_eval.py  test_redditl2.py  test_score.py  test_scoring.py  test_trainer.py  test_twgov.py  test_v2_assemble.py  test_v2_corpora.py  test_v2_decontam.py  test_v2_gates.py  test_v2_generate.py  test_v2_openrouter.py  test_v2_paraphrase.py  test_v2_pricing.py  test_v2_ptt.py  test_v2_score.py  test_v2_twgov.py  test_v2_wikinews.py  test_wikinews.py
tests/fixtures/: calibration.json
